--- a/index.css
+++ b/index.css
@@ -1,312 +1,93 @@
-html {
-  font-size: 16px;
-}
-body {
-  display: grid;
-  grid-column: 2;
-  background: #4acfac;
-  font-family: Asap;
-  font-size: 16px;
-  overflow-x: hidden;
-  margin: 0;
-}
-
-.body {
-  padding-top: 100px;
-  font-size: 18px;
-  line-height: 1.8;
-}
-
 @font-face {
   font-family: Nickainley;
   src: url("./Nickainley-Normal.otf") format("opentype");
 }
 
-@font-face {
-  font-family: NovaMono;
-  src: url("./NovaMono-Regular.ttf") format("opentype");
+html {
+  font-size: 18px;
+  color: #381460;
 }
 
-@font-face {
-  font-family: ShareTech;
-  src: url("./ShareTech-Regular.ttf") format("opentype");
+body {
+  background: #ffa500;
+  font-family: "Asap", sans-serif;
+  margin: 0;
+  line-height: 1.8;
 }
 
-.page {
+.bod {
   display: grid;
-  grid-template-columns: 20vw 80vw;
+  grid-area: bod;
+  padding-top: 10vh;
+  padding-bottom: 50px;
 }
 
 .nav-section {
   display: grid;
-  grid-column: 1;
-  grid-template-columns: 30vw;
+  grid-template-columns: 18vw;
   grid-template-rows: 33vh 33vh 33vh;
   position: fixed;
+  background: #fefefa;
+  height: 100%;
 }
 
-.nav {
+.page {
   display: grid;
-  grid-column: 1;
-  grid-row: 2;
-  width: 50%;
-  margin-left: -20px;
+  grid-gap: 10vw;
+  grid-template-columns: 15vw 55vw;
+  grid-template-areas: nav-section bod;
 }
 
 nav {
-  font-size: 20px;
   font-family: "Asap", sans-serif;
-}
-
-.wave {
-  display: grid;
-  grid-row: 1/4;
-  grid-column: 1;
-  width: 100vh;
-}
-
-.name {
-  display: grid;
-  grid-row: 1;
-  margin-top: -40px;
-  position: absolute;
-  grid-area: name;
-  margin-top: 40px;
-  padding-left: 20px;
-}
-
-.sun {
-  display: grid;
-  grid-row: 1;
-  grid-area: sun;
-  height: 120px;
-  position: absolute;
-  margin-left: 70px;
-}
-
-h1 {
-  color: #381460;
-  font-family: Nickainley;
-  font-size: 40px;
+  padding-top: 10%;
+  line-height: 2;
+  margin-left: 10%;
 }
 
 a {
-  color: #de2157;
-
   text-decoration: none;
-  padding-right: 15px;
-  margin-left: 40px;
 }
 
 p {
   color: #381460;
-  text-align: center;
-  padding-bottom: 100px;
-}
-
-.rays {
-  position: absolute;
-}
-
-.ray-diagonal {
-  background-color: #ffbd69;
-  width: 2.5px;
-  height: 17px;
-}
-.ray-vertical {
-  background-color: #ffbd69;
-  width: 3px;
-  height: 17px;
-}
-
-.ray-horizontal {
-  background-color: #ffbd69;
-  width: 17px;
-  height: 3px;
-}
-
-.ray-small {
-  background-color: #ffbd69;
-  width: 2px;
-  height: 10px;
-}
-
-.ray-1 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 63px;
-  margin-top: 8px;
-}
-
-.ray-2 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 16px;
-  margin-top: 52px;
-}
-
-.ray-3 {
-  position: absolute;
-  z-index: 1;
-  margin-top: 87px;
-  margin-left: 63px;
-}
-
-.ray-4 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 97px;
-  margin-top: 52px;
-}
-
-.ray-5 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 85px;
-  margin-top: 10px;
-  transform: rotate(30deg);
-}
-
-.ray-6 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 100px;
-  margin-top: 25px;
-  transform: rotate(60deg);
-}
-
-.ray-7 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 100px;
-  margin-top: 65px;
-  transform: rotate(-60deg);
-}
-
-.ray-8 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 85px;
-  margin-top: 83px;
-  transform: rotate(-30deg);
-}
-
-.ray-9 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 42px;
-  margin-top: 84px;
-  transform: rotate(30deg);
-}
-
-.ray-10 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 25px;
-  margin-top: 65px;
-  transform: rotate(60deg);
-}
-
-.ray-11 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 25px;
-  margin-top: 25px;
-  transform: rotate(-60deg);
-}
-
-.ray-12 {
-  position: absolute;
-  z-index: 1;
-  margin-left: 40px;
-  margin-top: 11px;
-  transform: rotate(-30deg);
-}
-
-.circle {
-  width: 6ch;
-  height: 6ch;
-  background-color: #ffbd69;
-  border-radius: 50%;
-  margin-left: 40px;
-  margin-top: 30px;
-  display: inline-block;
-}
-
-.eye {
-  width: 0.9ch;
-  height: 0.9ch;
-  background-color: black;
-  border-radius: 50%;
-  margin-left: 1.5ch;
-  margin-top: 2.5ch;
-}
-
-.gleam {
-  width: 0.3ch;
-  height: 0.3ch;
-  background-color: white;
-  border-radius: 50%;
-  margin-left: 0.2ch;
-}
-
-.mouth {
-  height: 1ch;
-  width: 2ch;
-  background-color: black;
-  border-radius: 0 0 10px 10px;
-  margin-top: 0.4ch;
-  margin-left: 0.05ch;
-}
-
-.stephanie {
-  width: 20%;
-  margin: auto;
+  padding-bottom: 10vh;
 }
 
 .photo {
-  width: 85%;
-  padding-left: 7.5%;
-  padding-top: 7.5%;
+  width: 60%;
+  margin: auto;
 }
 
-.blurb {
-  font-family: "Asap", sans-serif;
-  font-size: 20px;
-  padding-left: 250px;
-  padding-right: 250px;
-  padding-bottom: 100px;
-  color: #381460;
-  line-height: 1.8;
-  opacity: 0;
-  display: none;
+h1 {
+  font-family: Nickainley;
+  font-size: 50px;
 }
 
-.intro {
-  grid-area: intro;
-}
-
-h3 {
-  scroll-margin-top: 100px;
-  font-size: 30px;
-}
-
+h2,
+h3,
 h4 {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .section {
-  color: whitesmoke;
-  text-align: center;
-  padding-top: 70px;
-  padding-bottom: e 100px;
-  margin-left: -10px;
-  margin-right: -10px;
   opacity: 0;
+  padding-bottom: 30vh;
 }
 
 .line {
   border-bottom: 5px solid #fefefa;
   width: 300px;
-  margin: auto;
+}
+
+.about {
+  opacity: 0;
+}
+
+.blurb {
+  display: none;
+}
+
+.header {
+  opacity: 0;
 }
