--- a/index.css
+++ b/index.css
@@ -54,6 +54,11 @@ p {
   padding-bottom: 10vh;
 }
 
+p + ul {
+  margin-top: -10vh;
+  display: inline-block;
+}
+
 .photo {
   width: 60%;
   margin: auto;
@@ -100,4 +105,27 @@ li:before {
   content: "\25BA \0020";
   position: absolute;
   left: -10px;
+}
+
+.skills-and-exp {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto auto;
+}
+
+.tech-skills {
+  grid-area: tech-skills;
+}
+
+.non-tech-skills {
+  grid-area: non-tech-skills;
+}
+
+.experience {
+  grid-area: experience;
+  padding-right: 5%;
+}
+
+.volunteer {
+  grid-area: volunteer;
 }
