--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background: #ffa500;
+  background: #fefefa;
   font-family: "Asap", sans-serif;
   margin: 0;
   line-height: 1.8;
@@ -40,6 +40,8 @@ body {
 
 nav {
   font-family: "Asap", sans-serif;
+  font-weight: bold;
+  color: #381460;
   padding-top: 10%;
   line-height: 2;
   margin-left: 10%;
@@ -108,8 +110,6 @@ li:before {
   left: -10px;
 }
 
-.skills-and-exp {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: auto auto;
+.info {
+  display: none;
 }
