Add gradient footer

--- a/index.css
+++ b/index.css
@@ -20,10 +20,6 @@ body {
   opacity: 0;
 }
 
-.active {
-  color: green;
-}
-
 .bod {
   display: grid;
   grid-area: bod;
@@ -36,8 +32,8 @@ body {
   grid-template-columns: 18vw;
   grid-template-rows: 33vh 33vh 33vh;
   position: fixed;
-  background: #fefefa;
   height: 100%;
+  background-color: transparent;
 }
 
 .page {
@@ -231,4 +227,31 @@ div.project-links > a {
   padding: 15px;
   padding-left: 0px;
   text-align: center;
+}
+
+.dot {
+  height: 50px;
+  width: 50px;
+  background-color: #03a090;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+footer {
+  left: 0;
+  bottom: 0;
+  height: 150px;
+  width: 100%;
+  text-align: center;
+  background: linear-gradient(
+    0deg,
+    rgba(160, 125, 207, 1) 0%,
+    rgba(254, 254, 250, 1) 100%
+  );
+}
+
+footer > p {
+  font-size: 16px;
+  color: #381460;
+  padding-top: 50px;
 }
