--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 html {
   font-size: 18px;
   color: #381460;
+  overflow-x: hidden;
 }
 
 body {
@@ -235,13 +236,16 @@ div.project-links > a {
   background-color: #03a090;
   border-radius: 50%;
   display: inline-block;
+  opacity: 1;
+  position: relative;
+  margin-top: -40px;
 }
 
 footer {
   left: 0;
   bottom: 0;
   height: 150px;
-  width: 100%;
+  width: 100vw;
   text-align: center;
   background: linear-gradient(
     0deg,
