--- a/index.css
+++ b/index.css
@@ -241,6 +241,14 @@ div.project-links > a {
   opacity: 0;
 }
 
+.logo {
+  height: 50px;
+  margin-top: -60px;
+  opacity: 0;
+  display: inline-block;
+  position: relative;
+}
+
 footer {
   left: 0;
   bottom: 0;
