--- a/index.css
+++ b/index.css
@@ -303,6 +303,10 @@ form {
   margin-top: -5px;
 }
 
+.float-container {
+  margin: 15px;
+}
+
 label {
   display: block;
   position: absolute;
@@ -313,20 +317,31 @@ label {
 }
 
 input {
-  padding-top: 10px;
+  padding-top: 13px;
   padding-bottom: 10px;
   padding-left: 4em;
   padding-right: 0.5em;
   font-family: "Work Sans", sans-serif;
   font-size: 18px;
   color: #381460;
-  width: 23ch;
+  width: 78%;
   background-color: #fafad2;
   border: 0px solid;
 }
 
 input:focus {
-  outline-color: #03a090;
+  outline: 2px solid #b21f66;
+}
+
+.invalid {
+  background-color: lightpink;
+}
+
+.invalidnamemessage,
+.invalidemailmessage,
+.invalidmessagemessage {
+  color: #8c1d2a;
+  display: none;
 }
 
 #message {
@@ -334,7 +349,6 @@ input:focus {
   height: 10em;
 }
 
-#message,
 textarea {
   padding-top: 2.5em;
   font-size: 16px;
@@ -349,7 +363,7 @@ textarea {
 }
 
 textarea:focus {
-  outline-color: #03a090;
+  outline: 2px solid #b21f66;
 }
 
 .message {
@@ -362,10 +376,43 @@ textarea:focus {
 }
 
 form button {
-  background-color: #03a090;
+  background-color: #03b5a3;
   padding: 20px;
   font-size: 20px;
   border-radius: 20px;
-  border: 1px solid #381460;
+  margin: auto;
   font-family: "Asap", sans-serif;
+  color: #fafad2;
+  display: block;
+  margin-bottom: 20px;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #381460;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+form button:hover {
+  background-color: #b21f66;
+}
+
+form button:focus {
+  outline: 2px solid #b21f66;
+}
+
+/* button {
+  background-color: #ccbae3;
+  border-radius: 20px;
+  margin: 10px;
+  padding: 10px;
+  padding-right: 20px;
+  border: 1px solid #381460;
+} */
