--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: Nickainley;
-  src: url("./assets/Nickainley-Normal.otf") format("opentype");
-}
-
 html {
   font-size: 18px;
   color: #381460;
@@ -11,45 +6,10 @@ html {
 
 body {
   background: #fefefa;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
   margin: 0;
   line-height: 1.8;
   color: #381460;
-}
-
-.section {
-  opacity: 0;
-  scroll-margin-top: 5vh;
-}
-
-.bod {
-  display: grid;
-  grid-area: bod;
-  padding-top: 10vh;
-  padding-bottom: 50px;
-}
-
-.nav-section {
-  display: grid;
-  grid-template-columns: 18vw;
-  grid-template-rows: 33vh 33vh 33vh;
-  position: fixed;
-  height: 100%;
-  background-color: transparent;
-}
-
-.page {
-  display: grid;
-  grid-gap: 10vw;
-  grid-template-columns: 15vw 55vw;
-  grid-template-areas: nav-section bod;
-}
-
-nav {
-  font-family: "Asap", sans-serif;
-  font-weight: 700;
-  padding-top: 10%;
-  margin-left: 10%;
 }
 
 a {
@@ -61,11 +21,6 @@ a {
   color: #381460;
 }
 
-nav > a {
-  border-bottom: 3px solid #fefefa;
-  width: 100px;
-}
-
 a:visited {
   color: #381460;
 }
@@ -74,19 +29,78 @@ a:hover {
   color: #b21f66;
 }
 
-.focused-section-link {
-  border-bottom: 3px solid #b21f66;
-  width: 100px;
+ul {
+  padding-bottom: 1em;
 }
 
-p + ul {
-  margin-top: -10vh;
-  display: inline-block;
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  pointer-events: auto;
+}
+
+div > section {
+  margin-top: 15vh;
+  margin-bottom: 15vh;
+}
+
+/* Page layout */
+.bod {
+  display: grid;
+  grid-area: bod;
+  padding-top: 10vh;
+  padding-right: 20vw;
+  padding-bottom: 50px;
+}
+
+.page {
+  display: grid;
+  grid-gap: 5%;
+  grid-template-columns: 20% 75%;
+  grid-template-areas: nav-section bod;
+}
+
+/* Side area */
+
+.nav-section {
+  display: grid;
+  grid-template-columns: 18vw;
+  grid-template-rows: 33vh 33vh 33vh;
+  position: fixed;
+  height: 100%;
+  background-color: transparent;
 }
 
 .photo {
   width: 60%;
   margin: auto;
+}
+
+/* Navigation */
+
+nav {
+  font-family: "Asap", sans-serif;
+  font-weight: 700;
+  padding-top: 10%;
+  margin-left: 10%;
+}
+
+nav > a {
+  border-bottom: 3px solid #fefefa;
+  width: 100px;
+}
+
+.focused-section-link {
+  border-bottom: 3px solid #b21f66;
+  width: 100px;
+}
+
+/* Main area */
+
+.section {
+  opacity: 0;
+  scroll-margin-top: 5vh;
 }
 
 h1 {
@@ -101,9 +115,27 @@ h2 {
 
 h3,
 h4 {
-  font-size: 22px;
+  font-size: 24px;
   color: #381460;
+  font-family: "Nunito", sans-serif;
+  font-weight: "800";
 }
+
+.line {
+  border-bottom: 5px solid #a07dcf;
+  width: 300px;
+}
+
+/* Main area - About */
+
+.blurb {
+  display: none;
+  width: 90%;
+  padding-bottom: 10vh;
+  text-align: justify;
+}
+
+/* Main area - Skills and Experience */
 
 h3.skills-heading {
   text-decoration: underline;
@@ -122,14 +154,8 @@ h3.expanded:before {
   content: "\25BC";
 }
 
-.line {
-  border-bottom: 5px solid #a07dcf;
-  width: 300px;
-}
-
-.blurb {
+.info {
   display: none;
-  padding-bottom: 10vh;
 }
 
 .experience {
@@ -140,64 +166,23 @@ h3.expanded:before {
   list-style-type: disc;
 }
 
-ul {
-  padding-bottom: 1em;
-}
-
 button + ul {
   padding-left: 6ch;
 }
 
-.info {
-  display: none;
-}
-
-button {
-  background-color: transparent;
-  border: none;
-  font-family: "WorkSans", sans-serif;
-  cursor: pointer;
-  pointer-events: auto;
-}
-
-.card {
-  box-shadow: -4px -4px 20px 0 #949494;
-  border-radius: 5px;
-  margin: 50px 0 70px 0;
-  padding: 40px 40px 10px 40px;
-}
-
-.card > p {
-  width: 450px;
-  text-align: justify;
-}
-
-.budding-demo-card {
-  box-shadow: -4px -4px 20px 0 #949494;
-  border-radius: 5px;
-  position: absolute;
-  z-index: 2;
-  left: 520px;
-  top: 215px;
-  width: 25vw;
-  height: 30%;
-  background-color: #fefefa;
-}
-
-iframe {
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 50px;
-}
+/* Main area - Projects */
 
 .container {
   position: relative;
   z-index: 1;
 }
 
-div > section {
-  margin-top: 15vh;
-  margin-bottom: 15vh;
+.card {
+  box-shadow: -4px -4px 20px 0 #949494;
+  border-radius: 5px;
+  margin: 50px 0 70px 0;
+  padding: 40px 40px 60px 40px;
+  width: 100%;
 }
 
 ul.project-tech li {
@@ -210,10 +195,45 @@ ul.project-tech {
   margin-left: -40px;
 }
 
-div.project-links > a {
+.card > p {
+  text-align: justify;
+}
+.card > div > div > p {
+  text-align: justify;
+  padding-right: 1ch;
+  flex-basis: 50%;
+}
+
+.show-more-button {
+  font-family: "Nunito", sans-serif;
+  font-size: 16px;
+  text-decoration: underline;
+  font-size: 20px;
+  font-weight: bold;
+  color: #381460;
+  padding-left: 0;
+}
+
+.show-more-button:hover {
+  color: #b21f66;
+}
+
+.budding-demo-card {
+  box-shadow: -4px -4px 20px 0 #949494;
+  border-radius: 5px;
+  width: 350px;
+  height: 520px;
+  background-color: #fefefa;
+  margin-left: 2ch;
+  margin-bottom: 4ch;
+}
+
+#budding-more-info {
+  display: flex;
+}
+
+.project-links > a {
   display: inline-block;
-  padding: 15px;
-  padding-left: 0px;
   margin-bottom: 20px;
   font-weight: bold;
   font-size: 18px;
@@ -223,40 +243,26 @@ div.project-links > a {
 .nc-news-demo-card {
   box-shadow: -4px -4px 20px 0 #949494;
   border-radius: 5px;
-  position: absolute;
-  z-index: 2;
-  left: 380px;
-  top: 100px;
-  width: 35vw;
-  height: 20em;
   background-color: #fefefa;
+  height: 500px;
+  margin: 4ch 1ch;
 }
 
-.nc-news-p {
-  width: 300px !important;
-  padding-bottom: 20px;
+.project-links {
+  display: flex;
+  justify-content: space-around;
 }
 
-.nc-news-project-links > a {
-  display: inline-block;
-  margin-bottom: 20px;
-  font-weight: bold;
-  font-size: 18px;
-  text-decoration: underline;
-  padding: 15px;
-  padding-left: 0px;
-  text-align: center;
+/* Main area - Contact */
+
+.contact-grid {
+  display: grid;
+  grid-template-columns: 40% 110%;
+  grid-gap: 10%;
 }
 
-.dot {
-  height: 50px;
-  width: 50px;
-  background-color: #03a090;
-  border-radius: 50%;
-  display: inline-block;
-  position: relative;
-  margin-top: -40px;
-  opacity: 0;
+.contact-grid > .card {
+  margin-top: 15px;
 }
 
 .logo {
@@ -267,23 +273,27 @@ div.project-links > a {
   position: relative;
 }
 
-footer {
-  left: 0;
-  bottom: 0;
-  height: 150px;
-  width: 100vw;
-  text-align: center;
-  background: linear-gradient(
-    0deg,
-    rgba(160, 125, 207, 1) 0%,
-    rgba(254, 254, 250, 1) 100%
-  );
+.social-logos {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  display: flex;
 }
 
-footer > p {
-  font-size: 16px;
-  color: #381460;
-  padding-top: 50px;
+div > a {
+  display: inline;
+  margin-right: 10px;
+}
+
+.twitter-border {
+  height: 301px;
+  width: 249px;
+  padding: 1px;
+  border-radius: 2%;
+  box-shadow: 0px 0px 20px 4px #949494;
+}
+
+.float-container {
+  margin: 15px;
 }
 
 form {
@@ -293,23 +303,13 @@ form {
   width: 50%;
 }
 
-.social-logos {
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-
-div > a {
-  display: inline;
-  margin-right: 10px;
+form.card {
+  width: 50%;
 }
 
 .contact-form-heading {
   text-align: center;
   margin-top: -5px;
-}
-
-.float-container {
-  margin: 15px;
 }
 
 label {
@@ -319,6 +319,15 @@ label {
   padding-top: 7px;
   font-family: "Asap", sans-serif;
   height: 20px;
+}
+
+label[for="message"] {
+  display: block;
+  padding-right: 16.5em;
+  background-color: inherit;
+  margin-top: 1px;
+  margin-left: 1px;
+  padding-bottom: 20px;
 }
 
 input {
@@ -338,22 +347,6 @@ input:focus {
   outline: 2px solid #b21f66;
 }
 
-.invalid {
-  background-color: lightpink;
-}
-
-.invalidnamemessage,
-.invalidemailmessage,
-.invalidmessagemessage {
-  color: #8c1d2a;
-  display: none;
-}
-
-#message {
-  width: 95%;
-  height: 10em;
-}
-
 textarea {
   padding-top: 2.5em;
   font-size: 16px;
@@ -365,19 +358,23 @@ textarea {
   padding-right: 0.5em;
   background-color: lightgoldenrodyellow;
   border: 0px solid;
+  width: 95%;
+  height: 10em;
 }
 
 textarea:focus {
   outline: 2px solid #b21f66;
 }
 
-.message {
-  display: block;
-  padding-right: 16.5em;
-  background-color: inherit;
-  margin-top: 1px;
-  margin-left: 1px;
-  padding-bottom: 20px;
+.invalid {
+  background-color: lightpink;
+}
+
+.invalid-name,
+.invalid-email,
+.invalid-message {
+  color: #8c1d2a;
+  display: none;
 }
 
 form button {
@@ -413,29 +410,21 @@ form button:focus {
   outline: 2px solid #b21f66;
 }
 
-/* button {
-  background-color: #ccbae3;
-  border-radius: 20px;
-  margin: 10px;
-  padding: 10px;
-  padding-right: 20px;
-  border: 1px solid #381460;
-} */
-
-.contact-grid {
-  display: grid;
-  grid-template-columns: 40% 110%;
-  grid-gap: 10%;
+footer {
+  left: 0;
+  bottom: 0;
+  height: 150px;
+  width: 100vw;
+  text-align: center;
+  background: linear-gradient(
+    0deg,
+    rgba(160, 125, 207, 1) 0%,
+    rgba(254, 254, 250, 1) 100%
+  );
 }
 
-.contact-grid > .card {
-  margin-top: 15px;
-}
-
-.twitter-border {
-  height: 301px;
-  width: 249px;
-  padding: 1px;
-  border-radius: 2%;
-  box-shadow: 0px 0px 20px 4px #949494;
+footer > p {
+  font-size: 16px;
+  color: #381460;
+  padding-top: 50px;
 }
