--- a/index.css
+++ b/index.css
@@ -267,8 +267,8 @@ ul.project-tech {
 }
 
 .social-logos {
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin: 60px 0;
+
   display: flex;
 }
 
@@ -286,7 +286,9 @@ div > a {
 }
 
 .float-container {
-  margin: 15px;
+  margin: 15px 0;
+
+  width: 100%;
 }
 
 form {
@@ -315,18 +317,28 @@ label {
 
 label[for="message"] {
   display: block;
-  padding-right: 16.5em;
+  position: absolute;
+  width: 69%;
   background-color: inherit;
   margin-top: 1px;
   margin-left: 1px;
   padding-bottom: 20px;
+  z-index: 1;
+}
+
+.label-background {
+  position: absolute;
+  background-color: lightgoldenrodyellow;
+  margin-top: -1.5px;
+  z-index: 0;
+  width: 42%;
 }
 
 input {
   padding-top: 13px;
   padding-bottom: 10px;
-  padding-left: 4em;
   padding-right: 0.5em;
+  padding-left: 4em;
   font-family: "Work Sans", sans-serif;
   font-size: 18px;
   color: #381460;
@@ -350,12 +362,13 @@ textarea {
   padding-right: 0.5em;
   background-color: lightgoldenrodyellow;
   border: 0px solid;
-  width: 95%;
+  width: 100%;
   height: 10em;
+  box-sizing: border-box;
 }
 
 textarea:focus {
-  outline: 2px solid #b21f66;
+  outline: 3px solid #b21f66;
 }
 
 .invalid {
@@ -570,8 +583,7 @@ footer > p {
   }
 
   .social-logos {
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin: 40px 0;
     padding: 0 15%;
     display: flex;
     justify-content: space-between;
@@ -618,6 +630,10 @@ footer > p {
   label {
     font-family: "Asap", sans-serif;
     height: 20px;
+  }
+
+  .label-background {
+    width: 100%;
   }
 
   .twitter-border {
