--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ html {
   margin: -10px -10px;
 }
 
+p {
+  text-align: justify;
+}
+
 #wrapper {
   background: #fefefa;
   font-family: "Nunito", sans-serif;
@@ -81,7 +85,7 @@ nav {
   font-family: "Asap", sans-serif;
   font-weight: 700;
   padding-top: 10%;
-  margin-left: 10%;
+  margin-left: 15%;
 }
 
 nav > a {
@@ -130,7 +134,6 @@ h4 {
   display: none;
   width: 90%;
   padding-bottom: 10vh;
-  text-align: justify;
 }
 
 /* Main area - Skills and Experience */
@@ -164,8 +167,8 @@ h3.expanded:before {
   list-style-type: disc;
 }
 
-button + ul {
-  padding-left: 6ch;
+.experience > li > ul {
+  padding-inline-start: 1.5vw;
 }
 
 /* Main area - Projects */
@@ -267,8 +270,7 @@ ul.project-tech {
 }
 
 .social-logos {
-  margin: 60px 0;
-
+  margin: 10vh 0;
   display: flex;
 }
 
@@ -304,6 +306,7 @@ form {
 .contact-form-heading {
   text-align: center;
   margin-top: -5px;
+  font-family: "Asap", sans-serif;
 }
 
 label {
@@ -455,7 +458,6 @@ footer > p {
 
   main {
     grid-area: main;
-    /*  margin: 10px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -525,6 +527,7 @@ footer > p {
 
   p.blurb {
     padding: 0;
+    padding-bottom: 10vh;
     width: auto;
   }
 
@@ -643,6 +646,7 @@ footer > p {
     border-radius: 2%;
     box-shadow: 0px 0px 20px 4px #949494;
     margin: auto;
+    margin-bottom: 10vh;
   }
 
   .contact-grid > form {
@@ -668,5 +672,34 @@ footer > p {
     color: #381460;
     padding-top: 10%;
     width: 70%;
+    text-align: center;
+  }
+
+  #scroll-top-button {
+    height: 40px;
+    width: 40px;
+    position: fixed;
+    bottom: 3vh;
+    right: 5vw;
+    z-index: 99;
+    border-radius: 50%;
+    outline: none;
+    background-color: #03a090;
+    color: white;
+    cursor: pointer;
+    font-size: 25px;
+  }
+
+  #scroll-top-button:hover {
+    background-color: #b21f66;
+  }
+
+  .experience {
+    list-style-type: none;
+    padding-inline-start: 10vw;
+  }
+
+  .experience > li > ul {
+    padding-inline-start: 5vw;
   }
 }
